config/prow/cluster/monitoring/build-cluster/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    cert.gardener.cloud/issuer: ci-issuer
    cert.gardener.cloud/purpose: managed
    dns.gardener.cloud/class: garden
    dns.gardener.cloud/dnsnames: monitoring-build.prow.gardener.cloud
    nginx.ingress.kubernetes.io/auth-url: https://oauth2.prow.gardener.cloud/oauth2/auth
    nginx.ingress.kubernetes.io/auth-signin: https://oauth2.prow.gardener.cloud/oauth2/start?rd=https://monitoring-build.prow.gardener.cloud
spec:
  rules:
  - host: monitoring-build.prow.gardener.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              name: http
  tls:
  - hosts:
    - monitoring-build.prow.gardener.cloud
    secretName: monitoring-ingress-tls
